--- a/rb_layout_tiny01/tiny01/_theme/style_white/theme.css
+++ b/rb_layout_tiny01/tiny01/_theme/style_white/theme.css
@@ -110,6 +110,7 @@
     display: block;
 }
 #mega-menu {
+    z-index: 99999;
     background: #eee;
     width: 100%;
     height: 39px;
